# tape_sort

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md  build.sh  config.json  test.sh
.github/workflows/: action.yml
configs/: config.json  config_test.json
docker/: Dockerfile  docker-compose-run.yml  docker-compose-test.yml  docker-compose.yml
include/: Colors.hpp  ConfigParser.hpp  ReaderEmulator.hpp  Tape.hpp  TapeSorter.hpp
scripts/: build.sh  docker_build.sh  docker_run.sh  docker_start.sh  docker_test.sh  echo.sh  read_out.sh  record_in.sh  run.sh  test.sh
src/: ConfigParser.cpp  Tape.cpp  TapeSorter.cpp  tape_sort.cpp
tests/: sort_test.cpp  tape_test.cpp
utils/: tape_reader.cpp  tape_recorder.cpp
